--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ openai = "^1.54.0"
 langchain-experimental = "^0.3.2"
 langchain-openai = "^0.2.6"
 byaldi = "^0.0.7"
+llama-index = "^0.12.1"
+llama-index-postprocessor-colpali-rerank = "^0.2.0"
+tabulate = "^0.9.0"
+voyageai = "^0.3.1"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
