--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ llama-index = "^0.12.1"
 llama-index-postprocessor-colpali-rerank = "^0.2.0"
 tabulate = "^0.9.0"
 voyageai = "^0.3.1"
+deepeval = "^1.5.9"
+ragas = "^0.2.6"
+ipywidgets = "^8.1.5"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
