--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,21 +13,16 @@ pandas = "^2.2.3"
 matplotlib = "^3.9.2"
 langchain = "^0.3.4"
 chromadb = "^0.5.15"
-langchain-community = "^0.3.3"
 datasets = "~3.0.0"
 pydantic = "~2.9.2"
 pytrec_eval = "~0.5"
 openai = "^1.54.0"
-langchain-experimental = "^0.3.2"
-langchain-openai = "^0.2.6"
 byaldi = "^0.0.7"
-llama-index = "^0.12.1"
-llama-index-postprocessor-colpali-rerank = "^0.2.0"
-tabulate = "^0.9.0"
 voyageai = "^0.3.1"
 deepeval = "^1.5.9"
-ragas = "^0.2.6"
 ipywidgets = "^8.1.5"
+pypdf2 = "^3.0.1"
+pytesseract = "^0.3.13"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
