--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ deepeval = "^1.5.9"
 ipywidgets = "^8.1.5"
 pypdf2 = "^3.0.1"
 pytesseract = "^0.3.13"
+nest-asyncio = "^1.6.0"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
