--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "Apache 2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11.0,<3.13"
+python = ">=3.10.0,<3.13"
 pandas = "^2.2.3"
 matplotlib = "^3.9.2"
 langchain = "^0.3.4"
@@ -24,6 +24,7 @@ ipywidgets = "^8.1.5"
 pypdf2 = "^3.0.1"
 pytesseract = "^0.3.13"
 nest-asyncio = "^1.6.0"
+boto3 = "^1.35.68"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
