--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pypdf2 = "^3.0.1"
 pytesseract = "^0.3.13"
 nest-asyncio = "^1.6.0"
 boto3 = "^1.35.68"
+langchain-experimental = "^0.3.3"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
