--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytesseract = "^0.3.13"
 nest-asyncio = "^1.6.0"
 boto3 = "^1.35.68"
 langchain-experimental = "^0.3.3"
+pymupdf = "^1.24.14"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
