--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,16 @@ deepeval = "^1.5.9"
 ipywidgets = "^8.1.5"
 pypdf2 = "^3.0.1"
 pytesseract = "^0.3.13"
-nest-asyncio = "^1.6.0"
 boto3 = "^1.35.68"
 langchain-experimental = "^0.3.3"
 pymupdf = "^1.24.14"
+torch = "^2.5.1"
+unstructured = "^0.16.8"
+pdfminer = "^20191125"
+pdfminer-six = "20201018"
+pi-heif = "^0.21.0"
+unstructured-inference = "^0.8.1"
+unstructured-pytesseract = "^0.3.13"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
