chore: paddle ocr issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,10 @@ langchain-experimental = "^0.3.3"
 pymupdf = "^1.24.14"
 torch = "^2.5.1"
 unstructured = "^0.16.8"
-pdfminer = "^20191125"
-pdfminer-six = "20201018"
-pi-heif = "^0.21.0"
 unstructured-inference = "^0.8.1"
-unstructured-pytesseract = "^0.3.13"
+unstructured-paddleocr = "^2.8.1.0"
+paddleocr = "^2.7.0"
+paddlepaddle = "^2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
