chore: rollback to cpu

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,9 @@ pytesseract = "^0.3.13"
 boto3 = "^1.35.68"
 langchain-experimental = "^0.3.3"
 pymupdf = "^1.24.14"
-torch = "^2.5.1"
 unstructured = "^0.16.8"
 unstructured-inference = "^0.8.1"
-unstructured-paddleocr = "^2.8.1.0"
-paddleocr = "^2.7.0"
-paddlepaddle = "^2.5.0"
+pi-heif = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
