--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ unstructured-inference = "^0.8.1"
 unstructured-pytesseract = "^0.3.13"
 pymupdf = "^1.24.14"
 pi-heif = "^0.21.0"
+faiss-cpu = "^1.9.0.post1"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
