--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ llama-index = "^0.12.5"
 llama-index-postprocessor-colbert-rerank = "^0.3.0"
 openpyxl = "^3.1.5"
 rerankers = "^0.6.1"
+torch = "^2.5.1"
+qwen-vl-utils = "0.0.8"
+pdf2image = "^1.17.0"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
