feat: add claude

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,9 @@ transformers = ">=4.46.1,<4.47.0"
 evaluate = "^0.4.3"
 bert-score = "^0.3.13"
 rouge-score = "^0.1.2"
-ragas = "^0.2.9"
+aisuite = "^0.1.6"
+langchain-anthropic = "^0.3.1"
+langchain-google-genai = "^2.0.7"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
