--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ rouge-score = "^0.1.2"
 aisuite = "^0.1.6"
 langchain-anthropic = "^0.3.1"
 langchain-google-genai = "^2.0.7"
+google-genai = "^0.3.0"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.7.0"
